@@ -94,21 +94,23 @@ xsltDocumentFunction(xmlXPathParserContextPtr ctxt, int nargs){
 	obj = valuePop(ctxt);
 	ret = xmlXPathNewNodeSet(NULL);
 
-	for (i = 0; i < obj->nodesetval->nodeNr; i++) {
-	    valuePush(ctxt,
-		      xmlXPathNewNodeSet(obj->nodesetval->nodeTab[i]));
-	    xmlXPathStringFunction(ctxt, 1);
-	    if (nargs == 2) {
-		valuePush(ctxt, xmlXPathObjectCopy(obj2));
-	    } else {
+	if (obj->nodesetval) {
+	    for (i = 0; i < obj->nodesetval->nodeNr; i++) {
 		valuePush(ctxt,
 			  xmlXPathNewNodeSet(obj->nodesetval->nodeTab[i]));
+		xmlXPathStringFunction(ctxt, 1);
+		if (nargs == 2) {
+		    valuePush(ctxt, xmlXPathObjectCopy(obj2));
+		} else {
+		    valuePush(ctxt,
+			      xmlXPathNewNodeSet(obj->nodesetval->nodeTab[i]));
+		}
+		xsltDocumentFunction(ctxt, 2);
+		newobj = valuePop(ctxt);
+		ret->nodesetval = xmlXPathNodeSetMerge(ret->nodesetval,
+						       newobj->nodesetval);
+		xmlXPathFreeObject(newobj);
 	    }
-	    xsltDocumentFunction(ctxt, 2);
-	    newobj = valuePop(ctxt);
-	    ret->nodesetval = xmlXPathNodeSetMerge(ret->nodesetval,
-						   newobj->nodesetval);
-	    xmlXPathFreeObject(newobj);
 	}
 
 	xmlXPathFreeObject(obj);
@@ -216,15 +218,17 @@ xsltKeyFunction(xmlXPathParserContextPtr ctxt, int nargs){
 
 	ret = xmlXPathNewNodeSet(NULL);
 
-	for (i = 0; i < obj2->nodesetval->nodeNr; i++) {
-	    valuePush(ctxt, xmlXPathObjectCopy(obj1));
-	    valuePush(ctxt,
-		      xmlXPathNewNodeSet(obj2->nodesetval->nodeTab[i]));
-	    xsltKeyFunction(ctxt, 2);
-	    newobj = valuePop(ctxt);
-	    ret->nodesetval = xmlXPathNodeSetMerge(ret->nodesetval,
-						   newobj->nodesetval);
-	    xmlXPathFreeObject(newobj);
+	if (obj2->nodesetval != NULL) {
+	    for (i = 0; i < obj2->nodesetval->nodeNr; i++) {
+		valuePush(ctxt, xmlXPathObjectCopy(obj1));
+		valuePush(ctxt,
+			  xmlXPathNewNodeSet(obj2->nodesetval->nodeTab[i]));
+		xsltKeyFunction(ctxt, 2);
+		newobj = valuePop(ctxt);
+		ret->nodesetval = xmlXPathNodeSetMerge(ret->nodesetval,
+						       newobj->nodesetval);
+		xmlXPathFreeObject(newobj);
+	    }
 	}
 	valuePush(ctxt, ret);
     } else {
